--- a/230209/230209.md
+++ b/230209/230209.md
@@ -15,7 +15,17 @@ func doSomething(num: Int) throws -> Bool {
     if num >= 7 {
         return true
     } else {
+        if num < 0 {
+            throw Error
+        }
         return false
     }
 }
 ```
+
+에러 처리를 위해서는 함수 리턴 -> 앞에 `throws` 키워드 사용
+throws 가 되는 함수는 try 를 사용해서 호출해야함
+
+try를 호출하려면 do catch를 써야하고 안쓰러면 try? 혹은 try!로 호출
+
+에러는 Error 프로토콜을 채택한 열거형으로 만들 수 있음
