--- a/230302/230302.md
+++ b/230302/230302.md
@@ -2,4 +2,37 @@
 
 [NSURLRequestUseProtocolCachePolicy | Apple Developer Documentation](https://developer.apple.com/documentation/foundation/nsurlrequestcachepolicy/nsurlrequestuseprotocolcachepolicy)
 
-캐시는 로칼 캐시 데이터 stale 여부 따짐
+# Cache-Control
+
+근데 이전에 받은 데이터와 새로 요청한 데이터가 같다면 이 과정은 낭비일테죠.
+
+그래서 생겨난게 HTTP에서 제공하는 Cache-Control입니다. 적절하게 사용하여, 서버는 부하를 줄이고, 클라이언트는 네트워크를 거치는 시간을 아낄 수 있다.
+
+![기본적인, 클라와 서버 구조](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/425072b9-ddf9-4844-9b4b-8603bb89950c/Untitled.png)
+
+기본적인, 클라와 서버 구조
+
+중간에 캐시 서버가 들어간 구조를 살펴보자.
+
+![캐시서버가 들어간 구조](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d6031ff1-3bac-48d3-acee-a70c5c1a620b/Untitled.png)
+
+캐시서버가 들어간 구조
+
+요청한 데이터가 캐싱이 되어있다면 서버까지 가지 않고 캐시서버에서 좀 더 빠르게 데이터를 받을 수 있다.
+
+아니면 클라이언트 내에 로컬 캐시를 사용하는 방법도 있다.
+
+![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5e9e73e5-8fa4-4329-9a62-2ebe1c3fed3f/Untitled.png)
+
+# 캐시의 동작 원리
+
+![출처: [https://static.wixstatic.com/media/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg/v1/fill/w_740,h_472,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg](https://static.wixstatic.com/media/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg/v1/fill/w_740,h_472,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg)](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/607698c5-859e-4333-8f5e-f72825c76261/Untitled.png)
+
+출처: [https://static.wixstatic.com/media/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg/v1/fill/w_740,h_472,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg](https://static.wixstatic.com/media/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg/v1/fill/w_740,h_472,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/3cd8e5_c7229b262adc47fb931d54237c0a3483~mv2.jpg)
+
+1. Client의 요청이 Cache Server 혹은 로컬 Cache 관리자에 전달
+2. 캐시 된 문서가 있는지를 조회
+3. 존재한다면 문서의 유효성 체크를 하게 되고, 없다면 Server로 요청을 전달
+4. 해당 문서가 아직 유효하다면, 새로 생성한 Headers와 기존의 Body를 조합
+5. 유효하지 않다면, Server에 요청을 전달
+6. Client에 응답을 전달
