--- a/230410/230410.md
+++ b/230410/230410.md
@@ -82,7 +82,7 @@ protocol WirelessSensor: Sensor {
 
 이와 같은 POP 설계에서 얻을 수 있는 장점에는 두 가지가 있다.
 
-첫 번째로 각 프롵코ㅗㄹ은 특정 센서 타입에서 필요한 구체적인 요구 사항만을 포함한다.
+첫 번째로 각 프로토콜은 특정 센서 타입에서 필요한 구체적인 요구 사항만을 포함한다.
 
 두 번째로는 프로토콜 컴포지션을 사용해 단일 타입이 다중 프로토콜을 따르게 할 수 있다.
 
