--- a/230411/230411.md
+++ b/230411/230411.md
@@ -5,5 +5,53 @@ protocol Robot {
     var name: String { get set }
     var robotMovement: RobotMovement { get set }
     var sensors: [Sensor] { get }
+
+    init(name: String, robotMovement: RobotMovement)
+    func addSensor(sensor: Sensor)
+    func pollSesnors()
+}
+```
+
+POP 구조에 대해서 익숙하지 않다면 일반적으로는 프로토콜에 대한 기본적인 다이어그램을 그려서 이해하는 것이 도움이 된다.
+
+프로토콜을 사용해 로봇의 컴포넌트에 대한 요구 사항을 정의했다.
+
+```swift
+class SixWheelRover: Robot {
+    var name = "No Name"
+    var robotMovement: RobotMovement
+    var sensors: [Sensor] = [Sensor]()
+    
+    required init (name: String, robotMovement: RobotMovement) {
+        self.name = name
+        self.robotMovement = robotMovement
+    }
+    func addSensor(sensor: Sensor) {
+        sensors.append(sensor)
+    }
+    
+    func pollSensors() {
+        for sensor in sensors {
+            sensor.pollSensor()
+        }
+    }
+    
+    func addRangeSensor(sensor: RangeSensor, rangeCentimeter: Double) {
+        sensor.setRangeNotification(rangeCentimeter: rangeCentimeter, rangeNotification: rangeNotification)
+        addSensor(sensor: sensor)
+    }
+    
+    func addWirelessSensor(sensor: WirelessSensor) {
+        addSensor(sensor: sensor)
+        sensor.setMessageReceivedNotification(messageNotification: messageReceived)
+    }
+    
+    func rangeNotification() {
+        print("Too Close")
+    }
+    
+    func messageReceived(message: String) {
+        print("Message Received: " + message)
+    }
 }
 ```
