--- a/230414/230414.md
+++ b/230414/230414.md
@@ -17,7 +17,12 @@ class MyClass {
     }
 
     func oneFunction() {
-        
     }
 }
 ```
+
+클래스 인스턴스는 일반적으로 객체라고 부른다. 스위프트에서 구조체와 클래스는 같은 기능이 많으므로 각 타입의 인스턴스를 나타내는 경우에는 인스탄스라는 용어를 사용할 것이다.
+
+OOP를 접해본 적이 있다면 클래스 타입에 익숙할 것이다. 클래스 타입은 OOP가 도입된 이래로 계속해서 OOP의 근간이 되어왔다.
+
+클래스 인스턴스를 생성하는 경우 이름을 갖게 되므로, 클래스는 이름 있는 타입이다.
