--- a/230331/230331.md
+++ b/230331/230331.md
@@ -21,3 +21,25 @@ protocol FullName {
     func getFullName() -> String
 }
 ```
+
+구조체와 같은 값 타입의 경우 메소드가 메소드 자신이 속해 있는 인스턴스를 변경하고자 의도하는 경우에는 반드시 메소드 정의부 앞부분에 `mutating` 키워드를 추가해야만 한다.
+
+`mutating func changeName()`
+
+### 선택 가능한 요구 사항
+선택 가능한 요구사항을 사용하기 위해서는 프로토콜을 표시할 때 `@objc` 어트리뷰트가 붙어야 한다.
+
+그 후 `optional` 키워드를 사용하면 프로퍼티나 메소드가 선택 가능하다는 것으로 표시할 수 있다.
+
+```swift
+@objc protocol Phone {
+    var phoneNumber: String { get set }
+    @objc optional var emailAddress: String { get set }
+    func dialNumber()
+    @objc optinal func getEmail()
+}
+```
+
+## 프로토콜 상속
+
+프로토콜은 한 개 이상의 프로토콜로부터 요구 사항을 상속받을 수 있으며, 요구 사항을 추가할 수도 있다.
