--- a/230505/230505.md
+++ b/230505/230505.md
@@ -29,7 +29,7 @@
 
 1. 인접 행렬 그래프
 
-**방향 그래프 **
+**방향 그래프**
 
 A -> B
 C -> D
@@ -40,3 +40,47 @@ B 0 0 0 0
 C 0 0 0 1
 D 0 0 0 0 
 
+**무방향 그래프**
+
+A - B
+    |
+C - D
+
+  A B C D
+A 0 1 0 0
+B 1 0 0 1
+C 0 0 0 1
+D 0 1 1 0 
+<대각선 기준으로 대칭>
+
+그래프의 노드를 2차원 Int형 배열로 만듦
+
+# 코드
+
+```swift
+public enum EdgeType {
+  
+  case directed
+  case undirected
+}
+
+public protocol Graph {
+  
+  associatedtype Element
+  
+  func createVertex(data: Element) -> Vertex<Element>
+  func addDirectedEdge(from source: Vertex<Element>,
+                       to destination: Vertex<Element>,
+                       weight: Double?)
+  func addUndirectedEdge(between source: Vertex<Element>,
+                         and destination: Vertex<Element>,
+                         weight: Double?)
+  func add(_ edge: EdgeType, from source: Vertex<Element>,
+                             to destination: Vertex<Element>,
+                             weight: Double?)
+  func edges(from source: Vertex<Element>) -> [Edge<Element>]
+  func weight(from source: Vertex<Element>,
+              to destination: Vertex<Element>) -> Double?
+}
+
+```
